// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles "no" postback with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "n",
    "postback": Object {
      "data": "{\\"input\\":\\"n\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "payload": "n",
                "title": "Skip",
                "type": "postback",
              },
            ],
            "template_type": "button",
            "text": "Why do you find this reply not helpful? Please tell us in messages. If you want to skip this, click the skip button below.",
          },
          "type": "template",
        },
      },
      "type": "buttons",
    },
  ],
  "state": "ASKING_NOT_USEFUL_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "yes" postback with no other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedArticleText": "(0)(1)(/)(0)(9)(line)免費貼圖

「[全螢幕貼圖]生活市集x生活小黑熊」
https://line.me/S/sticker/10299

「松果購物 x 狗與鹿(動態貼圖) 」
https://line.me/S/sticker/10300

「LINE TV X 我的男孩限免貼圖」
https://line.me/S/sticker/10207",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "Thanks. You are the first one who gave feedback on this reply :)",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "share_contents": Object {
                  "attachment": Object {
                    "payload": Object {
                      "elements": Array [
                        Object {
                          "buttons": Array [
                            Object {
                              "title": "See other replies",
                              "type": "web_url",
                              "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
                            },
                          ],
                          "subtitle": "Please refer to https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz for other replies to this message and references!",
                          "title": "Hey someone else says \\"(0)(1)(/)(0)(9)(line)免費貼圖

「⋯⋯ is ⚠️️ OFF TOPIC!",
                        },
                      ],
                      "template_type": "generic",
                    },
                    "type": "template",
                  },
                },
                "type": "element_share",
              },
              Object {
                "title": "Submit a new reply",
                "type": "web_url",
                "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
              },
            ],
            "template_type": "button",
            "text": "📲 Don't forget to forward the messages above to others and share with them!
💁 And feel free to submit your own reply if you have anything to say about this!",
          },
          "type": "template",
        },
      },
      "type": "generic",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "yes" postback with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedArticleText": "(0)(1)(/)(0)(9)(line)免費貼圖

「[全螢幕貼圖]生活市集x生活小黑熊」
https://line.me/S/sticker/10299

「松果購物 x 狗與鹿(動態貼圖) 」
https://line.me/S/sticker/10300

「LINE TV X 我的男孩限免貼圖」
https://line.me/S/sticker/10207",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "We've received feedback from you and 1 other user!",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "share_contents": Object {
                  "attachment": Object {
                    "payload": Object {
                      "elements": Array [
                        Object {
                          "buttons": Array [
                            Object {
                              "title": "See other replies",
                              "type": "web_url",
                              "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
                            },
                          ],
                          "subtitle": "Please refer to https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz for other replies to this message and references!",
                          "title": "Hey someone else says \\"(0)(1)(/)(0)(9)(line)免費貼圖

「⋯⋯ is ⚠️️ OFF TOPIC!",
                        },
                      ],
                      "template_type": "generic",
                    },
                    "type": "template",
                  },
                },
                "type": "element_share",
              },
              Object {
                "title": "Submit a new reply",
                "type": "web_url",
                "url": "https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz",
              },
            ],
            "template_type": "button",
            "text": "📲 Don't forget to forward the messages above to others and share with them!
💁 And feel free to submit your own reply if you have anything to say about this!",
          },
          "type": "template",
        },
      },
      "type": "generic",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
